--- a/index.css
+++ b/index.css
@@ -16,12 +16,18 @@
     max-width: 260px;
 }
 
-.cabecalho__navegacao {
+/* .cabecalho__navegacao {
     display: flex;
     gap: 40px;
-}
+} */
 
-.cabecalho__navegacao--item {
+.cabecalho__navegacao--lista {
+    list-style-type: none;
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+.cabecalho__navegacao--item a {
     color: var(--branco);
     font-size: 24px;
     font-style: normal;
