--- a/index.css
+++ b/index.css
@@ -39,6 +39,10 @@
     max-width: 100%;
 }
 
+.banner__img-wrapper {
+    margin: 0;
+}
+
 .banner__descricao {
     max-width: 1200px;
     color: var(--grafite, #222);
